# pokerstars-audit

./: .gitignore  Dockerfile  LICENSE  README.md  build.sh  mtt-pstats.cabal  pokerstars-audit.cabal  stack.yaml
src/: Main.hs  Parser.hs  Report.hs  Server.hs  Transaction.hs  Utils.hs
src/Parser/: Base.hs  CSV.hs  HTML.hs
src/Transaction/: Action.hs  Currency.hs
