name:                mtt-pstats
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/mtt-pstats#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable mtt-pstats
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       base
                     , bytestring
                     , bytestring-builder
                     , wai
                     , warp
                     , process
                     , http-types
                     , tagsoup
                     , aeson
                     , cassava
                     , vector
                     , text
                     , containers
                     , data-default
                     , process-extras

  default-language:    Haskell2010
