name:                pokerstars-audit
version:             0.1.0.0
synopsis:            PokerStars playing history audit parser
description:         Please see README.md
homepage:            http://github.com/ostronom/pokerstars-audit#readme
license:             BSD3
license-file:        LICENSE
author:              Alexander Golubev, Konstantin Kirillov
maintainer:          k.kirillov@mttmarket.com
copyright:           2016 Alexander Golubev, Konstantin Kirillov
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable mtt-pstats
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       base
                     , bytestring
                     , bytestring-builder
                     , wai
                     , warp
                     , process
                     , http-types
                     , tagsoup
                     , aeson
                     , cassava
                     , vector
                     , text
                     , containers
                     , data-default
                     , process-extras

  default-language:    Haskell2010
